--- a/app/assets/stylesheets/components/_records-card.scss
+++ b/app/assets/stylesheets/components/_records-card.scss
@@ -61,3 +61,17 @@
   background-color: rgba(0, 0, 0, .95);
   z-index: 100;
 }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+
+  .records-grid {
+    height: 100%;
+    flex-wrap: wrap;
+  }
+
+  .records-content-wrapper {
+    max-width: 350px;
+  }
+
+}
