--- a/app/assets/stylesheets/pages/_records.scss
+++ b/app/assets/stylesheets/pages/_records.scss
@@ -37,8 +37,8 @@
       margin-left: 15%;
   }
 
-  .records-index-card {
-    max-width: 500px;
+  .records-results {
+    height: 100%;
   }
 
   .discover-vinyl-card {
